# protoproject

./: .gitignore  .graphifyignore  AGENTS.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
docs/: design.md  phase-1.md  phase-2.md  user-feedback.md  vision.md
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: list_models.py  test_env.py
src/protoproject/: __init__.py  audit.py  cli.py  config.py  embeddings.py  ingest.py  models.py  parser.py  progress.py  quality.py  refinement.py  store.py  tui.py  validator.py  workflow.py
tests/: test_phase1.py  test_session2.py  test_store_phase2.py  test_workflow.py
