[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protoproject"
version = "0.1.0"
description = "Prototype requirements-engine package."
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.20",
    "langgraph>=0.0.20",
    "neo4j>=5.18.0",
    "github-copilot-sdk>=1.0.0",
    "langchain-openai>=0.1.0",
    "sentence-transformers>=2.7",
    "textual>=0.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
protoproject = "protoproject.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.basic]
no-docstring-rgx = "^(_|test_.*|setUp|tearDown|setUpClass|tearDownClass|Test.*|.*Tests)$"
